logs/op_pointnet2__ext_furthest_point_sampling/run_09/test.log
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/latest owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/8.3.RC1/x86_64-linux/ascend_toolkit_install.info owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/latest owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/8.3.RC1/x86_64-linux/ascend_toolkit_install.info owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
=== FPS Operator Test ===
Traceback (most recent call last):
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2209, in _run_ninja_build
    subprocess.run(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/subprocess.py", line 526, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['ninja', '-v']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/test_pointnet2__ext_furthest_point_sampling.py", line 66, in <module>
    ok=test()
  File "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/test_pointnet2__ext_furthest_point_sampling.py", line 41, in test
    load_inline(name='fps_test_ops', cpp_sources=[cpp_source],
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1723, in load_inline
    return _jit_compile(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1798, in _jit_compile
    _write_ninja_file_and_build_library(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1926, in _write_ninja_file_and_build_library
    _run_ninja_build(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2225, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error building extension 'fps_test_ops': [1/2] c++ -MMD -MF main.o.d -DTORCH_EXTENSION_NAME=fps_test_ops -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1011\" -I/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/TH -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/THC -isystem /home/orange/miniconda3/envs/torch_npu/include/python3.10 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -std=c++17 -c /tmp/tmpo_85hf0q/main.cpp -o main.o 
FAILED: [code=1] main.o 
c++ -MMD -MF main.o.d -DTORCH_EXTENSION_NAME=fps_test_ops -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1011\" -I/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/TH -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/THC -isystem /home/orange/miniconda3/envs/torch_npu/include/python3.10 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -std=c++17 -c /tmp/tmpo_85hf0q/main.cpp -o main.o 
/tmp/tmpo_85hf0q/main.cpp: In function ‘at::Tensor fps_npu(const at::Tensor&, int64_t)’:
/tmp/tmpo_85hf0q/main.cpp:6:5: error: ‘at_npu’ has not been declared
    6 |     at_npu::native::OpCommand cmd;
      |     ^~~~~~
/tmp/tmpo_85hf0q/main.cpp:7:5: error: ‘cmd’ was not declared in this scope
    7 |     cmd.Name("pointnet2__ext_furthest_point_sampling").Input(xyz).Output(out).Attr("npoint", npoint).Run();
      |     ^~~
ninja: build stopped: subcommand failed.

[ERROR] 2026-07-06-17:35:26 (PID:1686985, Device:-1, RankID:-1) ERR99999 UNKNOWN applicaiton exception
